--- a/webapp/webui/src/main/resources/templates/include/style-css.html
+++ b/webapp/webui/src/main/resources/templates/include/style-css.html
@@ -18,4 +18,15 @@ td {
 	text-decoration: line-through;
 	color: #a9a9a9;
 }
+@keyframes rumble {
+	0%   { transform:translate(0); }
+	25%  { transform:translate(6px); }
+	50%  { transform:translate(0); }
+	75%  { transform:translate(-6px); }
+	100% { transform:translate(0); }
+}
+.shake {
+	animation:rumble 0.1s linear 4;
+	background-color: lightpink;
+}
 </style>
