added a processing to place a load by loop

--- a/webapp/webui/src/main/resources/templates/include/menu-item-roll.html
+++ b/webapp/webui/src/main/resources/templates/include/menu-item-roll.html
@@ -1,8 +1,14 @@
 		<ol>
 			<li><a th:href="${cUrl}">Normal</a></li>
-			<li><a th:href="${cUrl} + '?delay=100'" onclick="putLoadingImage();">Cause 0.1 sec delay at API</a></li>
-			<li><a th:href="${cUrl} + '?delay=1000'" onclick="putLoadingImage();">Cause 1.0 sec delay at API</a></li>
-			<li><a th:href="${cUrl} + '?delay=2000'" onclick="putLoadingImage();">Cause 2.0 sec delay at API</a></li>
+
+			<li><a th:href="${cUrl} + '?sleep=100'" onclick="putLoadingImage();">Sleep 0.1 sec at API</a></li>
+			<li><a th:href="${cUrl} + '?sleep=1000'" onclick="putLoadingImage();">Sleep 1.0 sec at API</a></li>
+			<li><a th:href="${cUrl} + '?sleep=2000'" onclick="putLoadingImage();">Sleep 2.0 sec at API</a></li>
+
+			<li><a th:href="${cUrl} + '?loop=500000000'" onclick="putLoadingImage();">Loop 500M count at API</a></li>
+			<li><a th:href="${cUrl} + '?loop=1000000000'" onclick="putLoadingImage();">Loop 1B count at API</a></li>
+			<li><a th:href="${cUrl} + '?loop=2000000000'" onclick="putLoadingImage();">Loop 2B count at API</a></li>
+
 			<li><a th:href="${cUrl} + '?code=4'">Cause 4xx error at API</a></li>
 			<li><a th:href="${cUrl} + '?code=5'">Cause 5xx error at API</a></li>
 		</ol>
