separated a scripts and a css from a html

--- a/webapp/webui/src/main/resources/templates/list.html
+++ b/webapp/webui/src/main/resources/templates/list.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<style th:replace="~{include/style-css}"></style>
+<link rel="stylesheet" type="text/css" href="../css/main.css" th:href="@{/css/main.css}">
 </head>
 <body>
 <div th:replace="~{include/title-list}">title</div>
