improved an implimenting to show webui

--- a/webapp/webui/src/main/resources/templates/list.html
+++ b/webapp/webui/src/main/resources/templates/list.html
@@ -1,12 +1,10 @@
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="../css/main.css" th:href="@{/css/main.css}">
-</head>
+<head th:replace="~{include/head}"></head>
 <body>
 <div th:replace="~{include/title-list}">title</div>
 <div>
 	<ul>
-		<li><a href="/roll">&#x21CC; Swith to /roll</a></li>
+		<li><a href="/roll">&#x21CC; Switch to /roll</a></li>
 	</ul>
 </div>
 <div class="main">
