--- a/webapp/webui/src/main/resources/static/css/main.css
+++ b/webapp/webui/src/main/resources/static/css/main.css
@@ -1,4 +1,8 @@
+body {
+	font-family: 'Cascadia Code', sans-serif;
+}
 .main {
+
 	display: flex;
 }
 .menu {
@@ -10,7 +14,10 @@
 .content-body-dice {
 	margin-right: 16px;
 }
-td {
+table {
+	border-spacing: 10px;
+}
+table td {
 	text-align: center;
 }
 .negation {
