improved a design in the page of webui

--- a/webapp/webui/src/main/resources/static/css/main.css
+++ b/webapp/webui/src/main/resources/static/css/main.css
@@ -15,9 +15,13 @@ body {
 	margin-right: 16px;
 }
 table {
-	border-spacing: 10px;
+	border-spacing: 5px;
+}
+table th {
+	padding: 5px;
 }
 table td {
+	padding: 5px;
 	text-align: center;
 }
 .negation {
