--- a/webapp/webui/src/main/resources/templates/include/head.html
+++ b/webapp/webui/src/main/resources/templates/include/head.html
@@ -1,6 +1,7 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../css/font.css" th:href="@{/css/font.css}">
-<link rel="stylesheet" type="text/css" href="../css/main.css" th:href="@{/css/main.css}">
-<th:block th:if="${dice} == null or ${dice} != '0'"><link rel="stylesheet" type="text/css" href="../css/table-stripe.css" th:href="@{/css/table-stripe.css}"></th:block>
-<script src="../script/main.js" th:src="@{/script/main.js}"></script>
+<title>WebApp - Roll a dice</title>
+<link rel="stylesheet" type="text/css" href="../static/css/font.css" th:href="@{/css/font.css}">
+<link rel="stylesheet" type="text/css" href="../static/css/main.css" th:href="@{/css/main.css}">
+<th:block th:if="${dice} == null or ${dice} != '0'"><link rel="stylesheet" type="text/css" href="../static/css/table-stripe.css" th:href="@{/css/table-stripe.css}"></th:block>
+<script src="../static/script/main.js" th:src="@{/script/main.js}"></script>
 </head>
