improved the text on the link

--- a/webapp/webui/src/main/resources/templates/include/menu-item.html
+++ b/webapp/webui/src/main/resources/templates/include/menu-item.html
@@ -1,5 +1,5 @@
 		<ol>
-			<li><a th:href="${cUrl}">Normal</a></li>
+			<li><a th:href="${cUrl}">Roll normally</a></li>
 
 			<li><a th:href="${cUrl} + '?sleep=100'" onclick="putLoadingImage();">Sleep 0.1 sec at API</a></li>
 			<li><a th:href="${cUrl} + '?sleep=1000'" onclick="putLoadingImage();">Sleep 1.0 sec at API</a></li>
