--- a/webapp/webui/src/main/resources/templates/include/menu-item.html
+++ b/webapp/webui/src/main/resources/templates/include/menu-item.html
@@ -1,4 +1,4 @@
-		<ol>
+		<ol id="menu-roll">
 			<li><a th:href="${cUrl}">Roll normally</a></li>
 
 			<li><a th:href="${cUrl} + '?sleep=100'" onclick="putLoadingImage();">Sleep 0.1 sec at API</a></li>
