--- a/webapp/webui/src/main/resources/templates/index.html
+++ b/webapp/webui/src/main/resources/templates/index.html
@@ -7,7 +7,12 @@
 		<div class="menu-title">
 			<h2>Roll a dice</h2>
 		</div>
+<th:block th:if="${dice} != '0'">
 		<div th:replace="~{include/menu-item}">title</div>
+</th:block>
+<th:block th:if="${dice} == '0'">
+		<div th:replace="~{include/menu-item-error}">title</div>
+</th:block>
 	</div>
 	<div class="content">
 		<div class="content-title">
