improved an interval to loop

--- a/webapp/webui/src/main/resources/templates/include/menu-item.html
+++ b/webapp/webui/src/main/resources/templates/include/menu-item.html
@@ -5,9 +5,9 @@
 			<li><a th:href="${cUrl} + '?sleep=15000'" onclick="putLoadingImage();">Sleep 15 sec at API</a></li>
 			<li><a th:href="${cUrl} + '?sleep=30000'" onclick="putLoadingImage();">Sleep 30 sec at API</a></li>
 
-			<li><a th:href="${cUrl} + '?loop=1000000'" onclick="putLoadingImage();">Loop 1M count at API</a></li>
-			<li><a th:href="${cUrl} + '?loop=3000000'" onclick="putLoadingImage();">Loop 3M count at API</a></li>
-			<li><a th:href="${cUrl} + '?loop=5000000'" onclick="putLoadingImage();">Loop 5M count at API</a></li>
+			<li><a th:href="${cUrl} + '?loop=500000'" onclick="putLoadingImage();">Loop 0.5M count at API</a></li>
+			<li><a th:href="${cUrl} + '?loop=1500000'" onclick="putLoadingImage();">Loop 1.5M count at API</a></li>
+			<li><a th:href="${cUrl} + '?loop=3000000'" onclick="putLoadingImage();">Loop 3.0M count at API</a></li>
 
 			<li><a th:href="${cUrl} + '?error=1'">Cause 5xx error at API</a></li>
 		</ol>
