added a style to add a line spacing in the menu list

--- a/webapp/webui/src/main/resources/static/css/main.css
+++ b/webapp/webui/src/main/resources/static/css/main.css
@@ -21,6 +21,10 @@ table td {
 	padding: 5px;
 	text-align: center;
 }
+.li-spacing {
+	margin-bottom: 10px;
+}
+
 .disabled-link {
 	pointer-events: none;
 	color: gray;
